--- a/podio.html
+++ b/podio.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<div class="container d-flex flex-column justify-content-between" style="padding:10%; height:5px">
+<div class="container d-flex flex-column justify-content-between" style="padding:10%; height:100vh">
     <h2 class="align-self-center">Podio</h2>
     <div class="form-group" style="margin-top:5vh">
 <table class="table">
@@ -43,44 +43,78 @@
     </tr>
     </tbody>
 </table>
+
 </div>
+    <h2 class="align-self-center" style="margin-top: 5vh">Todos los jugadores</h2>
+    <div style="overflow: scroll;">
+
+        <div class="form-group" style="margin-top:5vh">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Participante</th>
+                    <th scope="col">Puntos</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>Mark</td>
+                    <td>25</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>Jacob</td>
+                    <td>22</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <th scope="row">8</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <th scope="row">9</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <th scope="row">10</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <th scope="row">11</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <th scope="row">12</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                <tr>
+                    <th scope="row">13</th>
+                    <td>Larry the Bird</td>
+                    <td>19</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <button onclick="inscribir()" id="nombre" class="btn btn-danger" style="margin-bottom:10vh; margin-top: 10vh">Ver mis rondas</button>
 </div>
 
-<div style="div.ex1 {
-  background-color: white;
-  width: 110px;
-  height: 110px;
-  overflow: scroll;
-}">
-    <h2 class="align-self-center">Podio</h2>
-    <div class="form-group" style="margin-top:5vh">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Participante</th>
-                <th scope="col">Puntos</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>25</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>22</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry the Bird</td>
-                <td>19</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
+
 
 </body>
