--- a/inicio.html
+++ b/inicio.html
@@ -21,7 +21,7 @@
 <div class="bg-deepBlue">
 
     <div class="container">
-        <h1 align="center" style="padding: 15px 10px 5px 10px">Archero</h1>
+        <h1 align="center" style="padding: 15px 10px 5px 10px; font-weight: 600;">Archero</h1>
     </div>
 
 
@@ -34,7 +34,7 @@
 
     <div class="container">
 
-        <h2>Tu información:</h2>
+        <h2><b>Tu información:</b></h2>
 
         <br>
 
@@ -42,8 +42,10 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title">Nombre_competidor</h5>
+                        <p class="card-text">Categoria: categoria
+                            <br>
+                            Modalidad: modalidad</p>
                         <a href="#" class="btn btn-coral">Go somewhere</a>
                     </div>
                 </div>
@@ -54,11 +56,11 @@
 </div>
 
 
-<div class="bg-Blue">
+<div class="bg-competiciones">
   <div class="container">
       <div class="container">
           <br>
-          <h2>Tus competiciones:</h2>
+          <h2><b>Tus competiciones:</b></h2>
           <br>
           <div class="row">
               <div class="col-sm-6">
@@ -79,47 +81,52 @@
 </div>
 
 
-
-<div class="container">
-    <h2>Competiciones disponibles:</h2>
-    <br>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="bg-disponibles">
+    <div class="container">
+        <div class="container">
+            <br>
+            <h2><b>Competiciones disponibles:</b></h2>
+            <br>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title font-black">Special title treatment</h5>
+                            <p class="card-text font-black">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-coral">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+            <br>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title font-black">Special title treatment</h5>
+                            <p class="card-text font-black">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-coral">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+            <br>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title font-black">Special title treatment</h5>
+                            <p class="card-text font-black">With supporting text below as a natural lead-in to additional content.</p>
+                            <a href="#" class="btn btn-coral">Go somewhere</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <br>
         </div>
     </div>
-    <br>
 </div>
+
 
 
 
