--- a/inscripcion.html
+++ b/inscripcion.html
@@ -20,7 +20,7 @@
 
             <div class="form-group" style="margin-top:5vh">
                 <label for="nombre">Nombre</label>
-                <input type="nombre" class="form-control" id="nombre" aria-describedby="nombreHelp">
+                <input type="text" class="form-control" id="nombre" aria-describedby="nombreHelp">
             </div>
 
             <div class="form-group" style="margin-top:5vh">
