--- a/ronda.html
+++ b/ronda.html
@@ -19,9 +19,21 @@
             <h2 class="align-self-center">Competicion X</h2>
             <h2 class="align-self-center">Ronda X</h2>
             <div class="align-self-center">Tiempo restante para concluir la ronda:</div>
-            <span class="align-self-center" id="time">02:00</span>
-        </div>
+            <h3 class="align-self-center" id="time">05:00</h3>
+            <br>
+            <h3 class="align-self-center">Flecha 1/5</h3><br>
+            <label for="puntuacion">Puntuacion</label>
+            <input type="text" class="form-control" id="puntuacion" aria-describedby="puntuacionHelp">
 
+        </div>
+        <div class="d-flex flex-column">
+            <h3 class="align-self-center">Puntuacion ronda: </h3><br>
+            <h3 class="align-self-center">Puntuacion total: </h3><br>
+            <button onclick="inscribir()" id="nombre" class="btn btn-danger align-self-center"
+                style="margin-bottom:10vh;width:100%">Siguiente
+                flecha</button>
+
+        </div>
     </div>
     </div>
 </body>
