--- a/inscripcion.html
+++ b/inscripcion.html
@@ -27,8 +27,8 @@
                 <label for="division">Division</label><br>
                 <select id="division" name="division" id="division">
                     <option value="Joven">Joven</option>
-                    <option value="senior">Senior</option>
-                    <option value="veterano">Veterano</option>
+                    <option value="Senior">Senior</option>
+                    <option value="Veterano">Veterano</option>
                 </select>
             </div>
 
@@ -42,8 +42,7 @@
                 </select>
             </div>
         </div>
-        <button onclick="inscribir()" id="nombre" class="btn btn-danger" style="margin-bottom:10vh">Iniciar ronda
-            X</button>
+        <button onclick="inscribir()" id="nombre" class="btn btn-danger" style="margin-bottom:10vh">Inscribirse</button>
     </div>
 </body>
 
@@ -52,8 +51,13 @@
         elemento = document.getElementById("nombre");
         localStorage.setItem('nombre', elemento.value);
 
-        elemento = document.getElementById("nombre");
-        localStorage.setItem('nombre', elemento.value);
+        division = document.getElementById("division");
+        localStorage.setItem('division', division.value);
+
+        modalidad = document.getElementById("modalidad");
+        localStorage.setItem('modalidad', modalidad.value);
+
+        window.location.href = "inicio.html";
     }
 </script>
 
