--- a/inicio.html
+++ b/inicio.html
@@ -40,7 +40,7 @@
                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin"
                                     class="rounded-circle" width="150">
                                 <div class="mt-3">
-                                    <h4 id="nombre">Jesus moreno</h4>
+                                    <h4 id="nombre" style="font-weight: bold">Jesus moreno</h4>
                                     <p id="division" class="text-secondary mb-1">Division: Joven</p>
                                     <p id="modalidad" class="text-muted font-size-sm">Modalidad: Arco desnudo</p>
                                 </div>
@@ -48,8 +48,16 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </div>
+    </div>
 
-                    <div class="bg-competiciones">
+    <div class="bg-competiciones">
+        <div class="container">
+
+            <div class="container">
+
                         <div class="container">
                             <div class="container">
                                 <br>
@@ -73,60 +81,70 @@
                                 <br>
                             </div>
                         </div>
-                    </div>
+            </div>
+        </div>
+    </div>
 
 
-                    <div class="bg-disponibles">
-                        <div class="container">
-                            <div class="container">
-                                <br>
-                                <h2><b>Competiciones disponibles</b></h2>
-                                <br>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <h5 class="card-title font-black">Special title treatment</h5>
-                                                <p class="card-text font-black">With supporting text below as a natural
-                                                    lead-in to
-                                                    additional content.</p>
-                                                <a href="#" class="btn btn-coral">Go somewhere</a>
-                                            </div>
-                                        </div>
+
+    <div class="bg-disponibles">
+        <div class="container">
+
+            <div class="container">
+
+                <div class="container">
+                    <div class="container">
+                        <br>
+                        <h2><b>Competiciones disponibles</b></h2>
+                        <br>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title font-black">Special title treatment</h5>
+                                        <p class="card-text font-black">With supporting text below as a natural
+                                            lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-coral">Go somewhere</a>
                                     </div>
                                 </div>
-                                <br>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <h5 class="card-title font-black">Special title treatment</h5>
-                                                <p class="card-text font-black">With supporting text below as a natural
-                                                    lead-in to
-                                                    additional content.</p>
-                                                <a href="#" class="btn btn-coral">Go somewhere</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <br>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <h5 class="card-title font-black">Special title treatment</h5>
-                                                <p class="card-text font-black">With supporting text below as a natural
-                                                    lead-in to
-                                                    additional content.</p>
-                                                <a href="#" class="btn btn-coral">Go somewhere</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <br>
                             </div>
                         </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title font-black">Special title treatment</h5>
+                                        <p class="card-text font-black">With supporting text below as a natural
+                                            lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-coral">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title font-black">Special title treatment</h5>
+                                        <p class="card-text font-black">With supporting text below as a natural
+                                            lead-in to
+                                            additional content.</p>
+                                        <a href="#" class="btn btn-coral">Go somewhere</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 <script>
