--- a/competicion.html
+++ b/competicion.html
@@ -17,7 +17,8 @@
 <body>
   <div class="container d-flex flex-column justify-content-between" style="padding: 20%; height:100vh">
     <h2 class="align-self-center">Competicion</h2>
-    <div class="row" align="center">
+
+    <div class="row" align="center" style="margin-top:5vh">
     <div class="column">
       Rondas<br>
       Puntuacion total<br>
@@ -27,7 +28,8 @@
       Numeros 10<br>
     </div>
   </div>
-    <div class="row " align="center">
+    <h4>Flecha 4</h4>
+    <div class="row three" align="center" >
       <div class="col-6">
         Flech 1<br>
         Flecha 2<br>
@@ -37,7 +39,7 @@
         Flecha 2<br>
       </div>
     </div>
-    <button class="btn btn-danger">Iniciar ronda X</button>
+    <button class="btn btn-danger" style="margin-top:5vh">Iniciar ronda X</button>
   </div>
 </body>
 
