--- a/inscripcion.html
+++ b/inscripcion.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -14,34 +15,80 @@
 </head>
 
 <body>
-    <div class="container d-flex flex-column justify-content-between" style="padding:10%; height:100vh">
-        <div class="d-flex justify-content-center flex-column" style="margin-top:10%; margin-bottom:10%">
-            <h2 class="align-self-center">Inscribete</h2>
 
-            <div class="form-group" style="margin-top:5vh">
-                <label for="nombre">Nombre</label>
+<div class="bg-deepBlue">
+
+    <div class="container">
+        <h1 align="center" style="padding: 15px 10px 5px 10px; font-weight: 600;">Archero</h1>
+    </div>
+
+    <hr>
+
+</div>
+
+<div class="container">
+
+    <div class="container">
+        <br>
+        <h2 align="center"><b>Inscríbete</b></h2>
+
+    </div>
+</div>
+<br>
+
+    <div class="container d-flex flex-column justify-content-between" style="padding:10%">
+        <div class="d-flex justify-content-center flex-column">
+
+            <div class="form-group" style="margin-top:3vh">
+                <label for="nombre" style="margin-bottom: 10px">Nombre</label>
                 <input type="text" class="form-control" id="nombre" aria-describedby="nombreHelp">
             </div>
 
+            <br>
+            <br>
+
             <div class="form-group" style="margin-top:5vh">
-                <label for="division">Division</label><br>
-                <select id="division" name="division" id="division">
-                    <option value="Joven">Joven</option>
-                    <option value="Senior">Senior</option>
-                    <option value="Veterano">Veterano</option>
-                </select>
+                <div class="row">
+                    <div class="col-4">
+                        <label for="division">Division</label><br>
+                    </div>
+                    <div class="col-8">
+                        <select id="division" name="division" id="division">
+                            <option value="Joven">Joven</option>
+                            <option value="Senior">Senior</option>
+                            <option value="Veterano">Veterano</option>
+                        </select>
+                    </div>
+
+                </div>
             </div>
 
             <div class="form-group" style="margin-top:5vh">
-                <label for="modalidad">Modalidad</label><br>
-                <select id="modalidad" name="modalidad" id="modalidad">
-                    <option value="Arco olimpico">Arco olimpico</option>
-                    <option value="Arco desnudo">Arco desnudo</option>
-                    <option value="Arco instintivo">Arco instintivo</option>
-                    <option value="Arco longbow">Arco longbow</option>
-                </select>
+                <div class="row">
+                    <div class="col-4">
+                        <label for="modalidad">Modalidad</label><br>
+                    </div>
+                    <div class="col-8">
+                        <select id="modalidad" name="modalidad" id="modalidad">
+                            <option value="Arco olimpico">Arco olimpico</option>
+                            <option value="Arco desnudo">Arco desnudo</option>
+                            <option value="Arco instintivo">Arco instintivo</option>
+                            <option value="Arco longbow">Arco longbow</option>
+                        </select>
+                    </div>
+
+                </div>
             </div>
+
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
         <button onclick="inscribir()" id="nombre" class="btn btn-danger" style="margin-bottom:10vh">Inscribirse</button>
     </div>
 </body>
