--- a/competicion.html
+++ b/competicion.html
@@ -15,30 +15,63 @@
 </head>
 
 <body>
-  <div class="container d-flex flex-column justify-content-between" style="padding: 20%; height:100vh">
-    <h2 class="align-self-center">Competicion</h2>
 
-    <div class="row" align="center" style="margin-top:5vh">
-    <div class="column">
-      Rondas<br>
-      Puntuacion total<br>
-    </div>
-    <div class="column">
-      Numeros 9<br>
-      Numeros 10<br>
-    </div>
+<div class="bg-deepBlue">
+
+  <div class="container">
+    <h1 align="center" style="padding: 15px 10px 5px 10px; font-weight: 600;">Archero</h1>
   </div>
-    <h4>Flecha 4</h4>
-    <div class="row three" align="center" >
-      <div class="col-6">
-        Flech 1<br>
-        Flecha 2<br>
-      </div>
-      <div class="col-6">
-        Flech 1<br>
-        Flecha 2<br>
+  <hr>
+
+</div>
+
+<div class="container">
+
+  <div class="container">
+    <br>
+    <h2 align="center"><b>Competición: nombre</b></h2>
+    <br>
+    <p align="center"><a class="btn btn-coral" style="padding-right: 60px; padding-left: 60px">Clasificación</a></p>
+  </div>
+</div>
+
+  <div class="container d-flex flex-column justify-content-between" style="padding: 10%">
+
+    <h3>Tu puntuación: </h3>
+    <div class="card">
+      <div class="row" style="padding: 10px">
+        <div class="col-6">
+          Rondas: <br>
+          Puntuacion total: <br>
+        </div>
+        <div class="col-6">
+          Numeros 9: <br>
+          Numeros 10: <br>
+        </div>
       </div>
     </div>
+    <br>
+    <br>
+
+    <h4>Ronda 5/12</h4>
+    <div class="container">
+      <div class="row three" align="center" style="padding: 5px">
+        <div class="col-6">
+          <p style="margin: 0">Flecha 1: 5</p>
+          <p style="margin: 0">Flecha 1: 5</p>
+          <p style="margin: 0">Flecha 1: 5</p>
+
+        </div>
+        <div class="col-6">
+          <p style="margin: 0">Flecha 1: 5</p>
+          <p style="margin: 0">Flecha 1: 5</p>
+          <p style="margin: 0">Flecha 1: 5</p>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <br>
     <button class="btn btn-danger" style="margin-top:5vh">Iniciar ronda X</button>
   </div>
 </body>
